# llama-record-replay-mode

./: .gitignore  Makefile  combined_build_script.sh  combined_build_script_aie.sh  combined_build_script_pim.sh  launcher.py  record_replay_launcher.py  vanilla_build_script.sh
common/: DataStorage.cpp  RecordReplayMode.cpp
examples/main/: main.cpp
ggml/include/: ggml.h
ggml/src/ggml-cuda/: dmmv.cu
ggml/src/llamafile/: sgemm.cpp
include/: DataStorage.h  RecordReplayMode.h
lpddr_sim/: CMakeLists.txt  README.md
lpddr_sim/include/: INIReader.h  address.h  address_gen.h  burst_t.h  common.h  config.h  dram.h  dram_controller.h  dram_stat.h  fp16.h  lp5_controller.h  lpddr5.h  lpddr_sim_wrapper.hpp  node.h  pim.h  pim_req_gen.h  power_cal.h  storage_t.h  test_pim_kernel.h
lpddr_sim/ini/: LPDDR5X-8533_1P1B.ini  LPDDR5X-8533_1P2B.ini
lpddr_sim/run_1/: llama_logs
lpddr_sim/src/: a.out  lpddr_sim_wrapper.cpp  lpddr_sim_wrapper_2.cpp  main.cpp  main_2.cpp  main_llama.c  pim_simulator_main.cpp
saved_values/: readme.txt
